# deepseek-v4-mini-pytorch

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  docker-compose.yml  project.toml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: README.md
config/data/: ag_news.yaml  imdb.yaml  minipile.yaml  (+4 more)
data/: __init__.py  data_utils.py  syntethic_long_context_retrieval.py  text_datasets.py  tinystories_data.py
docs/: README.md
notebooks/: DeepSeekv4_full.ipynb  abliation_suite.ipynb  training.ipynb  validate_arquitecture_modules.ipynb  validate_training_modules.ipynb
proyect_structure/: deepseek_v4_project_guide.md  training.md
src/: __init__.py  csa_components.py  csa_light_indexer.py  deepseek_block.py  deepseek_components.py  deepseek_csa_attention.py  deepseek_hca_attention.py  deepseek_moe.py  deepseek_mtp.py  hca_components.py  mHC_residuals.py  mHC_residuals_utils.py  mini_deepseek_class.py  mtp_components.py
tests/: test_RMSNorm.py  test_SwiGLU.py  test_csa.py  test_deepseek_model.py  test_embedding.py  test_hca.py  test_mha_baseline.py  test_mhc.py  test_moe.py  test_mtp.py  test_rope.py  test_transformer_baseline.py  test_transformer_block.py
training/: __init__.py  adam_optmizer.py  autocast.py  chekpoints.py  deepseek_modules_metrics_utils.py  ema.py  eval_one_epoch.py  full_deepseek_metrics.py  loss_metrics.py  mhc_metrics.py  moe_metrics.py  mtp_metrics.py  muon_optimizer.py  scheduler.py  seed.py  train_deepseek.py  train_one_epoch.py  train_one_epoch_utils.py  training_metrics.py
(+40 files in other folders)
